Fix home page carousel spacing

--- a/styles/pages/index.scss
+++ b/styles/pages/index.scss
@@ -5,7 +5,7 @@
     padding: 1em 0;
 
     .carouselItem {
-      margin: 0.5em;
+      padding: 0.5em;
 
       & > div {
         height: 100%;
